2005-02-20  Sushma Rai <rsushma@novell.com>
	
	* storage/exchange-account.[ch] (exchange_account_is_offline_sync_set):
	Added new, to read the offline_sync value set for the account.
	(exchange_account_new): Checking for the account level offline sync setting
	and storing it.

	* storage/exchange-config-listener.c (add_esource): Checking for the 
	account level and folder level offline sync values and updating the 
	e-sources.

2005-02-20  Sushma Rai <rsushma@novell.com>

2005-02-19  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/Makefile.am : Now link camel with krb5 for working around
	libtool glitch on SuSE.

2005-02-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/xc-commands.c (do_folder_size_menu): Enable popping of
	folder size dialog from the menu.

2005-02-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c : Fixed a build break

2005-02-10  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-exchange-search.c (exchange_body_contains): Check
	network availability. If unavail, fall back to parent search class
	body_contains() method.

2005-02-12  Arafat Medini <kinryu@silverpen.de>

	* configure.in  Readded Arabic locale ar to ALL_LINGUAS

2005-02-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (add_vevent) : Always
	set the TRANSP property from the busy status. Fixes #70283
	(receive_objects) : Fixed a memory leak. Fixes #72482

2005-02-11  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (account_changed): Removing the 
	esources for the account before asking for restart, if owa url is 
	modified. Fixes #71995.

2005-02-10  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-autoconfig.c (validate): Changed the support URL value.
	Fixes #71800

2005-02-10  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c (exchange_auto_detect_cb): Adding
	GC server to the table of auto detected values.